tree-sitter-hope/test/corpus/compilation_units.txt
==================
Imports
==================

uses list
uses io

----

(compilation_unit
  (module_use_declaration
    (ident))
  (module_use_declaration
    (ident)))

==================
Function
==================

dec evalExpr : num -> num
--- evalExpr(n) <= 0

----

(compilation_unit
  (function_declaration
    (binding
      (ident))
    (type_expression
      (binary_type_expression
        (type_expression
          (ident))
        (type_expression
          (ident)))))
  (function_equation
    (pattern
      (ident)
      (pattern
        (ident)))
    (expression
      (ident))))

==================
Comments
==================

! Comments

----

(compilation_unit
  (line_comment))

==================
Single exported type
==================

pubtype x

----

(compilation_unit
  (type_export_declaration
    (ident)))

==================
Multiple exported types
==================

pubtype x, y, z

----

(compilation_unit
  (type_export_declaration
    (ident)
    (ident)
    (ident)))

==================
Single exported function
==================

pubconst f

----

(compilation_unit
  (constant_export_declaration
    (ident)))

==================
Multiple exported functions
==================

pubconst f, g, h

----

(compilation_unit
  (constant_export_declaration
    (ident)
    (ident)
    (ident)))

==================
Infix function
==================

infix <> : 6

----

(compilation_unit
  (infix_declaration
    (binding
      (ident))
    (decimal)))

==================
Module declaration
==================

module test
    pubconst x
end

----

(compilation_unit
  (module
    (binding
      (ident))
    (constant_export_declaration
      (ident))))
