tree-sitter-hope/test/corpus/expressions.txt
==================
Function application
==================

dec eval : num -> num
--- eval(n) <= other(n)

----

(compilation_unit
  (function_declaration
    (binding
      (ident))
    (type_expression
      (binary_type_expression
        (type_expression
          (ident))
        (type_expression
          (ident)))))
  (function_equation
    (pattern
      (ident)
      (pattern
        (ident)))
    (expression
      (ident)
      (expression
        (ident)))))

==================
List expression
==================

dec eval : list char
--- eval <= [1, 2, 3]

----

(compilation_unit
  (function_declaration
    (binding
      (ident))
    (type_expression
      (ident)
      (ident)))
  (function_equation
    (pattern
      (ident))
    (expression
      (list_expression
        (expression
          (ident))
        (expression
          (ident))
        (expression
          (ident))))))

==================
Let expression
==================

dec eval : list char
--- eval <= let a == [1] in a <> [1, 2, 3]

----

(compilation_unit
  (function_declaration
    (binding
      (ident))
    (type_expression
      (ident)
      (ident)))
  (function_equation
    (pattern
      (ident))
    (expression
      (local_variable_expression
        (pattern
          (ident))
        (expression
          (list_expression
            (expression
              (ident))))
        (expression
          (ident)))
      (ident)
      (list_expression
        (expression
          (ident))
        (expression
          (ident))
        (expression
          (ident))))))

==================
Where expression
==================

dec eval : list char
--- eval <= a <> [1, 2, 3] where a == [1]

----

(compilation_unit
  (function_declaration
    (binding
      (ident))
    (type_expression
      (ident)
      (ident)))
  (function_equation
    (pattern
      (ident))
    (expression
      (ident)
      (ident)
      (local_variable_expression
        (expression
          (list_expression
            (expression
              (ident))
            (expression
              (ident))
            (expression
              (ident))))
        (pattern
          (ident))
        (expression
          (list_expression
            (expression
              (ident))))))))

==================
Set expression
==================

dec eval : list char
--- eval <= {1, 2, 3}

----

(compilation_unit
  (function_declaration
    (binding
      (ident))
    (type_expression
      (ident)
      (ident)))
  (function_equation
    (pattern
      (ident))
    (expression
      (set_expression
        (expression
          (ident))
        (expression
          (ident))
        (expression
          (ident))))))

==================
Conditional expression
==================

dec eval : list char
--- eval <= a(0) then 0 else 1

----

(compilation_unit
  (function_declaration
    (binding
      (ident))
    (type_expression
      (ident)
      (ident)))
  (function_equation
    (pattern
      (ident))
    (expression
      (ident)
      (conditional_expression
        (expression
          (expression
            (ident)))
        (expression
          (ident))
        (expression
          (ident))))))

==================
Inverse conditional expression
==================

dec eval : list char
--- eval <= 0 if a(0) else 1

----

(compilation_unit
  (function_declaration
    (binding
      (ident))
    (type_expression
      (ident)
      (ident)))
  (function_equation
    (pattern
      (ident))
    (expression
      (conditional_expression
        (expression
          (ident))
        (expression
          (ident)
          (expression
            (ident)))
        (expression
          (ident))))))

==================
String expression
==================

dec eval : list char
--- eval <= "hello"

----

(compilation_unit
  (function_declaration
    (binding
      (ident))
    (type_expression
      (ident)
      (ident)))
  (function_equation
    (pattern
      (ident))
    (expression
      (string))))

==================
Char expression
==================

dec eval : char
--- eval <= 'h'

----

(compilation_unit
  (function_declaration
    (binding
      (ident))
    (type_expression
      (ident)))
  (function_equation
    (pattern
      (ident))
    (expression
      (char))))

==================
Line break expression
==================

dec eval : char
--- eval <= '\n'

----

(compilation_unit
  (function_declaration
    (binding
      (ident))
    (type_expression
      (ident)))
  (function_equation
    (pattern
      (ident))
    (expression
      (char))))

==================
Identifier with a dash
==================

dec eval' : char
--- eval' <= 'h'

----

(compilation_unit
  (function_declaration
    (binding
      (ident))
    (type_expression
      (ident)))
  (function_equation
    (pattern
      (ident))
    (expression
      (char))))

==================
Literal patterns
==================

dec eval : char # list char -> char
--- eval('c', "aaa") <= 'h'

----

(compilation_unit
  (function_declaration
    (binding
      (ident))
    (type_expression
      (binary_type_expression
        (type_expression
          (binary_type_expression
            (type_expression
              (ident))
            (type_expression
              (ident)
              (ident))))
        (type_expression
          (ident)))))
  (function_equation
    (pattern
      (ident)
      (tuple_pattern
        (pattern
          (char))
        (pattern
          (string))))
    (expression
      (char))))
